testsuite/tests/indexed-types/should_fail/Overlap11.stderr

Overlap11.hs:10:8: error:
    • Couldn't match expected type ‘F a Int’ with actual type ‘Int’
    • In the expression: 5 :: Int
      In an equation for ‘g’: g x = (5 :: Int)
    • Relevant bindings include
        x :: a (bound at Overlap11.hs:10:3)
        g :: a -> F a Int (bound at Overlap11.hs:10:1)
